Prueba ejemplo base funcional

--- a/HTML/pagland/html/index.html
+++ b/HTML/pagland/html/index.html
@@ -30,11 +30,11 @@
                     <a href="#" class="nav_links">Blog</a>
                 </li>
 
-                <img src="./images/close.svg" class="nav_close">
+                <img src="../images/close.svg" class="nav_close">
             </ul>
 
             <div class="nav_menu">
-                <img src="./images/menu.svg" class="nav_img">
+                <img src="../images/menu.svg" class="nav_img">
             </div>
         </nav>
 
@@ -267,8 +267,7 @@
             </section>
         </section>
 
-        <script src="../js/slider.js"></script>
-        <script src="../js/questions.js"></script>
+       
 
     </main>
    
@@ -301,6 +300,9 @@
                 </div>
             </form>
         </section>
-
+        
+        <script src="../js/slider.js"></script>
+        <script src="../js/questions.js"></script>
+        <script src="../js/menu.js"></script>
 </body>
 </html>
